; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libxo/libxo/extr_xo_encoder.c_xo_encoder_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libxo/libxo/extr_xo_encoder.c_xo_encoder_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XO_STYLE_ENCODER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @xo_encoder_create(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @XO_STYLE_ENCODER, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32* @xo_create(i32 %6, i32 %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %20

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i64 @xo_encoder_init(i32* %12, i8* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %11
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @xo_destroy(i32* %17)
  store i32* null, i32** %5, align 8
  br label %19

19:                                               ; preds = %16, %11
  br label %20

20:                                               ; preds = %19, %2
  %21 = load i32*, i32** %5, align 8
  ret i32* %21
}

declare dso_local i32* @xo_create(i32, i32) #1

declare dso_local i64 @xo_encoder_init(i32*, i8*) #1

declare dso_local i32 @xo_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
